<resources>
    <string name="app_name">Emoticon Counter</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="grateful">Grateful</string>
    <string name="angry">Angry</string>
    <string name="excited">Excited</string>
    <string name="disappointed">Disappointed</string>
    <string name="counterPlaceholder">0</string>
    <string name = "summary">Summary</string>
    <string name="backbutton">Back</string>




</resources>